<resources>
    <string name="app_name">StudentBudget</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Student Budget</string>
    <string name="nav_header_subtitle">Kristianstad University</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name:</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_budget">Budget</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_account">Accounts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_test">Testing</string>
    <string name="view_spending">New Expense</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok">Ok</string>
    <string name="transactions">Transactions</string>
    <string name="summary">Summary</string>
    <string name="delete_account_text">All income and expenses associated with this account will be erased</string>
    <string name="menu_newexpense">New Expense</string>
    <string name="menu_newincome">New Income</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
