<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_overView">

    <fragment
        android:id="@+id/nav_overView"
        android:name="se.hkr.studentbudget.overview.OverViewFragment"
        android:label="@string/menu_overview"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/nav_budget"
        android:name="se.hkr.studentbudget.budget.BudgetFragment"
        android:label="@string/menu_budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/nav_expenses"
        android:name="se.hkr.studentbudget.expenses.ExpensesFragment"
        android:label="@string/menu_expenses"
        tools:layout="@layout/fragment_expenses" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="se.hkr.studentbudget.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="se.hkr.studentbudget.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
    android:id="@+id/nav_test"
    android:name="se.hkr.studentbudget.test.TestFragment"
    android:label="@string/menu_test"
    tools:layout="@layout/fragment_test" />

    <fragment
        android:id="@+id/nav_transaction"
        android:name="se.hkr.studentbudget.transactions.TransactionFragment"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/nav_account"
        android:name="se.hkr.studentbudget.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

</navigation>