<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/deleteAccountHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text='Delete "account"'
        android:textColor="@color/colorExpense"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:text="@string/delete_account_text"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/account_cancelBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/design_default_color_primary"
            android:text="@string/cancel_button" />

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <Button
            android:id="@+id/account_saveBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/design_default_color_primary"
            android:text="@string/ok"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>
</LinearLayout>